...
        textContainer.widthTracksTextView = true

        let layoutManager = NSLayoutManager()
        layoutManager.addTextContainer(textContainer)
        textStorage.addLayoutManager(layoutManager)

        let noteTextView = NoteTextView(frame: .zero, textContainer: textContainer)
        noteTextView.noteTextViewDelegate = coordinator
        noteTextView.isEditable = true
        noteTextView.isScrollEnabled = true
        noteTextView.backgroundColor = .clear
        noteTextView.textContainerInset = UIEdgeInsets(top: 8, left: 12, bottom: 8, right: 12)
        noteTextView.autoresizingMask = [.flexibleWidth, .flexibleHeight]
...
